--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<p style="margin: auto; height: 50px; width: 100%; text-align: center">Loading....</p>
 	<script>
-	window.location = "http://canadiancmc.wpengine.com";
+	window.location = "http://canadiancommercialmortgages.ca/";
 	</script>
   	<!--
 	<div id='footer'> 
